# git-account-switcher

./: .gitignore  README.md  index.html  package-lock.json  package.json
specs/1-git-credential-switch/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-git-credential-switch/checklists/: requirements.md
specs/1-git-credential-switch/contracts/: tauri-commands.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: credential.rs  git.rs  lib.rs  models.rs  storage.rs  tray.rs  validation.rs
src-tauri/src/commands/: account.rs  binding.rs  mod.rs  system.rs
src/components/: AccountForm.tsx  AccountList.tsx  RepoBindings.tsx  Settings.tsx  StatusBar.tsx
src/lib/: commands.ts  types.ts
